app/styles/_widget.scss
.layout {
    position: absolute;
    top:65px;
    left:0;
    right:0;
    bottom:20px;
    max-width: 1420;
    overflow-y: auto;
    overflow-x: hidden;

    .GridCell {
        position: absolute;
        overflow: hidden;

        .case {
            position: absolute;
            height: 100%;
            width: 100%;
            overflow-y: auto;
            overflow-x: hidden;
        }

        .custom-hud-component {
            display: table;
            height: 100%;
            width: 100%;
            overflow: hidden;
            border: 1px solid $gray-dark;
            background: $gray-darkest;
            padding: 10px;

            li {
                list-style: none;
            }

            .Listings__bar {
                height: 150px;

                a {
                    padding: 0 0 10px 20px;
                    float: left;
                }

                .Listings__counts {
                    padding-left: 20px;
                    clear: both;
                    text-align: center;

                    div {
                        display: block;
                        float: left;
                        width: 100px;
                    }

                    .count {
                        font-size: 32px;
                        margin-left: 10px;
                    }
                }
            }

            .CaptureFrame {
                position: relative;
                height: 100%;
                overflow: hidden;
            }

            .RecentActivity {
                position: absolute;
                width: 100%;
                height: 100%;
                overflow-x: hidden;
                overflow-y: auto;

                h1 {
                    margin-top: 0px;
                    margin-bottom: 0px;
                }
            }

            .RecentActivity__activities {
                left: 10px;
                right: 20px;

                .ChangeLogText{
                    padding-left: 61px;
                }

                .recent-activity-icon {
                    position: relative;
                    float: left;
                    top: 3px;
                    left: 21px;
                    max-height: 30px;
                    max-width: 30px;
                }

                .icon-caret-right {
                    margin-top: 6px;
                }

                .RecentActivity__empty {
                    width: 50%;
                    margin: 0 auto 0 auto;
                    text-align:center;
                    color: $white;

                    a {
                        color: $blue;
                        font-weight: 600;
                        font-size: 2em;
                    }
                }
            }

            .TableRow {
                display: table-row;
                overflow-y: auto;
                min-height:0;
                height:100%;
            }
            
            .TableRowZero {
                display: table-row;
                height: 0;
            }
        }
    }

    .EmptyCell{
        background-color: $body-bg;
    }

    .EmptyCell:hover{
        border: 1px solid $gray-darkest;
    }

    .DragGrip, .DragGripFF{
        position: absolute;
        width: 12px;
        height: 12px;
        bottom: 0;
        right: 0;
        background-repeat: no-repeat;
        background-origin: content-box;
        box-sizing: border-box;
        cursor: se-resize;
        @extend .icon-grip-12-grayLightest;
    }
}

.resizing{
    cursor: se-resize;
}

